# rustico

./: .gitignore  README.md
rustico/: Cargo.toml  rustico  script.sh
rustico/src/: card.rs  cli.yml  lib.rs  main.rs  player.rs
rustico/src/card/: card_number.rs  card_suit.rs  french_card.rs  mod.rs
rustico/src/consts/: consts.rs
rustico/src/game/: mod.rs  normal_round.rs  round.rs  rustic_round.rs
rustico/src/logger/: logger.rs
rustico/src/players/: coordinator.rs  mod.rs  player.rs  player_game.rs  round_type.rs
rustico/src/tests/: card_tests.rs  coordinator_tests.rs  mod.rs  player_tests.rs  round_tests.rs
