[package]
name = "rustico"
version = "0.1.0"
authors = ["Jazmin Ferreiro <jferreiro@fi.uba.ar>", "Matias Rozanec <mrozanec@fi.uba.ar>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
